--- a/debian/DEBIAN/control
+++ b/debian/DEBIAN/control
@@ -3,7 +3,7 @@ Priority: extra
 Maintainer: Christopher Gervais <chris@ergonlogic.com>
 Homepage: http://www.drush.org
 Package: drush
-Version: 8.0.3
+Version: 8.x.x
 Section: php
 Installed-Size: 9216
 Architecture: all
